# RAGCore

./: .env_example  README.md  app.py  pyproject.toml  repos.txt
.github/workflows/: deploy.yml  ruff.yml
api/: api.yaml
configs/: deployment_config.yaml  logging.yaml
docker/: Dockerfile  build.sh  docker-compose.yml  run.sh  stop.sh
evaluation/: EVALUATION_SETUP.md  eval_swe_qa.py
evaluation/llm-as-judge/: evaluation.ipynb
evaluation/llm-as-judge/generations/: llm-as-judge-deepseek-r1.csv  llm-as-judge-gigachat-2-max.csv  llm-as-judge-qwen-3.csv
notebooks/: vector_db_and_embedder_usage.ipynb
src/: assistant.py
src/agent/: __init__.py  agent.py  prompts.py
src/core/: schemas.py  service.py
src/core/db/: __init__.py  vector_database.py
src/core/embedder/: __init__.py  embedder.py
src/core/llm/: __init__.py  llm.py
src/enrichment/: data_enrichment.py
src/enrichment/loader/: __init__.py  github.py  loader.py
src/enrichment/parser/: __init__.py  parser.py
src/search/: search_engine.py
src/search/postprocessor/: __init__.py  postprocessor.py
src/search/preprocessor/: __init__.py  preprocessor.py
src/search/qa/: __init__.py  qa_generator.py
src/search/qa/resources/: prompts.py  templates.py
src/search/reranker/: __init__.py  reranker.py
src/search/retriever/: __init__.py  retriever.py
src/search/rewriter/: __init__.py  query_rewriter.py
src/utils/: github.py  logger.py  validator.py
tests/: test_repo_parser.py
tests/data/: chunks.json  test_deployment_config.yaml
tests/data/test_repo/: a.py
