[project]
name = "ragcore"
version = "0.1.0"
description = "RAGCore monorepo"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "repochunker",
]

[tool.uv.sources]
repochunker = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
]
