[project]
name = "ragcore"
version = "0.1.0"
description = "RAGCore monorepo"
requires-python = ">=3.12"
dependencies = [
    "astchunk==0.1.0",
    "dotenv==0.9.9",
    "omegaconf==2.3.0",
    "pydantic==2.12.5",
    "pytest>=9.0.1",
    "streamlit==1.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
