[project]
name = "ragcore"
version = "0.1.0"
description = "RAGCore monorepo"
requires-python = ">=3.12"
dependencies = [
    "astchunk==0.1.0",
    "dotenv==0.9.9",
    "gradio>=4.44.1",
    "gitpython>=3.1.43",
    "langchain-text-splitters>=0.2.0",
    "omegaconf==2.3.0",
    "pydantic==2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.11",
]
